<resources>
    <string name="app_name">GtoHome</string>
    <string name="rs_simbol">₹</string>
    <string name="title_activity_login_">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new_customer">New Customer</string>
    <string name="register_account">Register Account</string>
    <string name="register_text">By creating a account you will be able to shop faster, be up to date on an order\'s status, and keep track of the orders you have previously made.</string>
    <string name="continue_">Continue</string>
    <string name="returning_customer">Returning Customer</string>
    <string name="i_am_returning_customer">I am returning customer</string>
    <string name="login">Login</string>
    <string name="email_address">E-Mail Address</string>
    <string name="password">Password</string>
    <string name="if_already_account_text">If you already have an account with us, Please login at the login page.</string>
    <string name="your_personal_details">Your Personal Details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-Mail</string>
    <string name="telephone">Telephone</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="read_agree_privacy_policy">I have read and agree to the <b>Privacy Policy</b> </string>
    <string name="register_success_text">Congratulations! Your new account has been successfully created! \n\nYou can now take advantage of member privileges to enhance your online shopping experience with us.  \n\nIf you have ANY questions about the operation of this online shop, please e-mail the store owner.  \n\nA confirmation has been sent to the provided e-mail address. If you have not received it within the hour, please contact us.</string>
    <string name="your_account_hasbeen_created">Your account has been created!</string>
    <string name="forgotten_pw">Forgotten Password?</string>
    <string name="forgot_your_pw">" FORGOT YOUR PASSWORD?"</string>
    <string name="forgot_pw_text">Enter the e-mail address associated with your account. Click submit to have a password reset link e-mailed to you.</string>
    <string name="your_email_address">Your E-Mail Address</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="my_basket">My Basket</string>
    <string name="my_account">My Account</string>
    <string name="contact_us">Contact us</string>
    <string name="why_choose_us">Why Choose Us?</string>
    <string name="on_time_delivery">On time delivery</string>
    <string name="free_delivery_on">Free delivery on</string>
    <string name="quality_assurance">Quality assurance</string>
    <string name="you_can_trust_as">You can trust as</string>
    <string name="fruits_and_vegetables"><![CDATA[Fruits & Vegetables]]></string>
    <string name="fruits">Fruits</string>
    <string name="vegitables">Vegitables</string>
    <string name="view_all">View All</string>
    <string name="feature_product">Featured Products</string>
    <string name="load_more_products">Load More Products</string>
    <string name="grocery_staples"><![CDATA[Grocery & Staples]]></string>
    <string name="add">Add</string>
    <string name="our_popular_brand">Our Popular Brands</string>
    <string name="search_criteria">Search Criteria</string>
    <string name="keywords">Keywords</string>
    <string name="search_in_subcategories">Search in subcategories</string>
    <string name="search_product_desc">Search in product descriptions</string>
    <string name="product_meet_search_criteria">Products Meeting The Search Criteria</string>
    <string name="gtohome_address">gtohome \nayanchery(po) \nvalliad \n673512 (pin)</string>
    <string name="view_google_map">View Google Map</string>
    <string name="gtohome_telephone">+91 896 3000 400</string>
    <string name="opening_time">9 am</string>
    <string name="contact_form">Contact Form</string>
    <string name="opening_time_text">Opening Time</string>
    <string name="your_name">Your Name</string>
    <string name="enquiry">Enquiry</string>
    <string name="submit">Submit</string>
    <string name="contact">Contact</string>
    <string name="contact_gtohome">GtoHOME \nonline supermarket \nayanchery(po)  \nvalliad  \n\ncontact@gtohome.in \nadmin@gtohome.in \n+91 896 3000 400</string>
    <string name="edit_ac_info">Edit your account information</string>
    <string name="change_your_pw">Change your password</string>
    <string name="modify_address">Modify your address book entries</string>
    <string name="modify_wishlist">Modify your wish list</string>
    <string name="my_order">My Orders</string>
    <string name="view_order_history">View your order history</string>
    <string name="downloads">Downloads</string>
    <string name="your_reward_point">Your Reward Points</string>
    <string name="view_return_request">View your return requests</string>
    <string name="your_trnsc">Your Transactions</string>
    <string name="recurring_payment">Recurring payments</string>
    <string name="information">Information</string>
    <string name="about_us">About Us</string>
    <string name="delivery_info">Delivery Information</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="term_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="return_">Returns</string>
    <string name="edit_info">Edit Info</string>
    <string name="change_pw">Change Password</string>
    <string name="your_pw">Your Password</string>
    <string name="new_address">New Address</string>
    <string name="add_address">Add Address</string>
    <string name="company">Company</string>
    <string name="address1">Address 1</string>
    <string name="address2">Address 2</string>
    <string name="city">City</string>
    <string name="post_code">Post Code</string>
    <string name="country">Country</string>
    <string name="region_state">Region/State</string>
    <string name="default_address">Default Address</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="address_book_entry">Address Book Entries</string>
    <string name="my_wishlist">My Wish List</string>
    <string name="order_history">Order history</string>
    <string name="order_id">Order ID</string>
    <string name="customer">Customer</string>
    <string name="no_of_product">No. of Products</string>
    <string name="status">Status</string>
    <string name="total">Total</string>
    <string name="date_added">Date Added</string>
    <string name="reward_point">Your Rewards Points</string>
    <string name="return_request">Product Returns</string>
    <string name="your_transcation">Your Transactions</string>
    <string name="recuring_payment">Recurring Payments</string>
    <string name="logout">Logout</string>
    <string name="return_product_rma_nmbr_text">Please complete the form below to request an RMA number.</string>
    <string name="order_imformation">Order Information</string>
    <string name="order_date">Order Date</string>
    <string name="product_info">Product Information</string>
    <string name="product_name">Product Name</string>
    <string name="product_code">Product Code</string>
    <string name="quantity">Quantity</string>
    <string name="product_is_open">Product is opened</string>
    <string name="reason_for_return">Reason for Return</string>
    <string name="dead_on_arival">Dead On Arrival</string>
    <string name="faulty_please_supply">Faulty, please supply details</string>
    <string name="order_error">Order Error</string>
    <string name="other_please_supply_details">Other, please supply details</string>
    <string name="reaciving_wrong_item">Received Wrong Item</string>
    <string name="faulty_other_details">Faulty or other details</string>
    <string name="clear_cart">Clear cart</string>
    <string name="checkout">Checkout</string>
    <string name="enter_coopan_here">Enter your coupon here</string>
    <string name="apply_coopan">Apply Coupon</string>
    <string name="get_quotes">Get Quotes</string>
    <string name="enter_gift_certificate">Enter your gift certificate code here</string>
    <string name="apply_gift_certificate">Apply Gift Certificate</string>
    <string name="sub_total">Sub-Total:</string>
    <string name="total_">Total:</string>
    <string name="select_existing_address">I want to use an existing address</string>
    <string name="all_new_address">I want to use a new address</string>
    <string name="free_shipping">Free Shipping</string>
    <string name="select_shipping_prefer">Please select the preferred shipping method to use on this order.</string>
    <string name="select_payment_method">Please select the preferred payment method to use on this order.</string>
    <string name="select_payment_wallet">Please select the preferred payment method to add money.</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="razor_pay">Razor Pay</string>
    <string name="payu_money">PayUMoney</string>
    <string name="add_comments_about_order">Add Comments About Your Order</string>
    <string name="comments">Comments</string>
    <string name="read_agree_terms_conditions"><![CDATA[I have read and agree to the Terms & Conditions]]></string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="film_genres">Film genres</string>
    <string name="website">https://gtohome.in</string>
    <string name="date">22 jan 2020</string>
    <string name="selected_item">Selected item</string>
    <string-array name="film_genre">
        <item>Grocery &amp; Staples</item>
        <item>Fruits &amp; Vegitables</item>
        <item>Personal Care</item>
        <item>Home Needs</item>
        <item>Dairy &amp; Bakery</item>
        <item>Fish &amp; Meat</item>
    </string-array>
    <string-array name="actionFilms">
        <item>Grains &amp; Grains Products</item>
        <item>Daal &amp; Pulses</item>
        <item>Edible Oils</item>
        <item>Whole Spices &amp; Powders</item>
        <item>Salt &amp; Sugar &amp; Juggery</item>
        <item>Tea &amp; Coffee &amp; Milk Powders</item>
        <item>Dry Fruits &amp; Nuts</item>

    </string-array>
    <string-array name="musicals">
        <item>Fruits</item>
        <item>Vegetables</item>

    </string-array>
    <string-array name="dramas">
        <item>Personal Hygiene</item>
        <item>Skin Care</item>
        <item>Oral Care</item>
        <item>Shaving Needs</item>
        <item>Hare Care</item>
        <item>Deos &amp; Perfumes</item>
        <item>Baby Cares</item>
    </string-array>
    <string-array name="thrillers">
        <item>Detergents</item>
        <item>Cleaning Products</item>
        <item>House Hold Items</item>
        <item>Candles &amp; Agarbathi</item>
        <item>Freshners</item>
        <item>Electricals &amp; Electronics</item>
        <item>Repellents</item>

    </string-array>
    <string-array name="comedies">
        <item>Breakfast &amp; Careal &amp; Mixes</item>
        <item>Paneer &amp; Curd</item>

    </string-array>
    <string-array name="fishes_meats">
        <item>Fishes</item>
        <item>Meats</item>

    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>