<?xml version="1.0" encoding="utf-8"?>
<layout>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.login_signup.Login_Activity">


    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/rectangle_bg_border"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                style="@style/text_20_black"
                android:text="@string/new_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                >
            </TextView>

            <TextView
                android:padding="@dimen/_5sdp"
                style="@style/text_14_black"
                android:textStyle="bold"
                android:text="@string/register_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            </TextView>

            <TextView
                android:padding="@dimen/_5sdp"
                style="@style/text_12_black"
                android:text="@string/register_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            </TextView>

            <TextView
                android:id="@+id/tv_register"
                android:background="@drawable/rectangle_bg_solid"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                style="@style/text_12_black"
                android:text="@string/continue_"
                android:layout_width="@dimen/_100sdp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                >
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/rectangle_bg_border"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                style="@style/text_20_black"
                android:text="@string/returning_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                >
            </TextView>

            <TextView
                android:padding="@dimen/_5sdp"
                style="@style/text_14_black"
                android:textStyle="bold"
                android:text="@string/i_am_returning_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            </TextView>


            <LinearLayout
                android:padding="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/text_14_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address" />


                <EditText
                    android:id="@+id/inward_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_address"
                    android:background="@drawable/edit_text_bg"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:padding="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/text_14_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:background="@drawable/edit_text_bg"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_forgot_pw"
                style="@style/text_14_black"
                android:padding="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgotten_pw" />

            <TextView
                android:id="@+id/tv_login"
                android:background="@drawable/rectangle_bg_solid"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                style="@style/text_12_black"
                android:text="@string/login"
                android:layout_width="@dimen/_100sdp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                >
            </TextView>

        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</LinearLayout>
</layout>