<?xml version="1.0" encoding="utf-8"?>
<layout>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.login_signup.Register_Success_Activity">


    <LinearLayout
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <TextView
            style="@style/text_16_black"
            android:textStyle="bold"
            android:text="@string/your_account_hasbeen_created"
            android:textAllCaps="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            >
        </TextView>

    <TextView
        android:padding="@dimen/_5sdp"
        style="@style/text_12_black"
        android:text="@string/register_success_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </TextView>

    <TextView
        android:layout_gravity="end"
        android:gravity="center"
        android:id="@+id/tv_continue"
        android:background="@drawable/rectangle_bg_solid"
        android:padding="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp"
        style="@style/text_12_black"
        android:text="@string/continue_"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        >
    </TextView>


    </LinearLayout>


</LinearLayout>

</layout>